# Fuse

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_shader.ps1  generate_pipeline.ps1  generate_pipelines.ps1
compiler/: CMakeLists.txt
compiler/include/compiler/: cp_pch.h
compiler/src/: cp_compiler.cpp
editor/: CMakeLists.txt  ed_catalog.cpp  ed_catalog.h  ed_detail.cpp  ed_detail.h  ed_dockspace.cpp  ed_dockspace.h  ed_ecs_compat.c  ed_ecs_compat.h  ed_fwd.h  ed_graph.h  ed_hierarchy.cpp  ed_hierarchy.h  ed_inspector.cpp  ed_inspector.h  ed_main.cpp  ed_main.h  ed_material_symbol.h  ed_modelview.cpp  ed_modelview.h  ed_node.h  ed_pch.h  ed_profiler.cpp  ed_profiler.h  ed_sceneview.cpp  ed_sceneview.h  ed_statusbar.cpp  ed_statusbar.h  ed_titlebar.cpp  ed_titlebar.h  ed_viewport.cpp  ed_viewport.h
editor/dockable/: CMakeLists.txt  ed_canvas.cpp  ed_canvas.h  ed_catalog.cpp  ed_catalog.h  ed_hierarchy.cpp  ed_hierarchy.h  ed_inspector.cpp  ed_inspector.h  ed_profiler.cpp  ed_profiler.h
editor/include/editor/: ed_color.h  ed_dockspace.h  ed_fwd.h  ed_graph.h  ed_heap.h  ed_id.h  ed_main.h  ed_node.h  ed_pch.h  ed_statusbar.h  ed_titlebar.h  ed_view.h
editor/include/editor/node/: ed_mesh.h  ed_noise.h  ed_output.h
editor/node/: ed_noise.cpp  ed_noise.h  ed_output.cpp
editor/src/: Context.java  Main.java  ed_dockspace.cpp  ed_graph.cpp  ed_main.cpp  ed_node.cpp  ed_statusbar.cpp  ed_titlebar.cpp  ed_view.cpp
editor/src/node/: ed_mesh.cpp  ed_noise.cpp  ed_output.cpp
editor/src/view/: ed_asset.cpp  ed_canvas.cpp  ed_catalog.cpp  ed_geometry.cpp  ed_hierarchy.cpp  ed_inspector.cpp  ed_profiler.cpp  ed_viewport.cpp
editor/view/: ed_canvas.cpp  ed_canvas.h  ed_geometry.h  ed_hierarchy.h  ed_inspector.cpp  ed_sceneview.cpp  ed_sceneview.h  ed_viewport.h
engine/: CMakeLists.txt  buffer.c  buffer.h  camera.c  camera.h  context.c  context.h  database.c  database.h  eg_buffer.c  eg_buffer.h  eg_camera.c  eg_camera.h  eg_context.c  eg_context.h  eg_engine.c  eg_engine.h  eg_forward.h  eg_fwd.h  eg_image.c  eg_image.h  eg_itself.c  eg_itself.h  eg_model.c  eg_model.h  eg_pch.h  eg_pipeline.c  eg_pipeline.h  eg_player.c  eg_player.h  eg_profiler.c  eg_profiler.h  eg_renderer.c  eg_renderer.h  eg_scene.c  eg_scene.h  eg_scene_manager.c  eg_scene_manager.h  eg_swapchain.c  eg_swapchain.h  (+20 more)
engine/binding/: CMakeLists.txt  eg_context.c  eg_context.h
engine/component/: eg_camera.c  eg_camera.h  eg_controller.c  eg_controller.h  eg_rigidbody.c  eg_rigidbody.h  eg_transform.c  eg_transform.h  eg_transform.inl
engine/components/: eg_camera.c  eg_camera.h  eg_camera_components.c  eg_camera_components.h  eg_controller_components.c  eg_controller_components.h  eg_editor_controller.c  eg_editor_controller.h  eg_rigidbody_components.c  eg_rigidbody_components.h  eg_transform.c  eg_transform.h  eg_transform.inl  eg_transform_components.c  eg_transform_components.h
engine/core/: api.h  config.h  filesystem.c  filesystem.h  forward.h  heap.c  heap.h  macros.h  random.c  random.h  string.c  string.h  vector.c  vector.h
engine/include/engine/: eg_buffer.h  eg_clang.h  eg_context.h  eg_database.h  eg_filesys.h  eg_fwd.h  eg_glslang.h  eg_heap.h  eg_image.h  eg_importer.h  eg_macros.h  eg_model.h  eg_pch.h  eg_pipeline.h  eg_profiler.h  eg_random.h  eg_renderer.h  eg_scene.h  eg_swapchain.h  eg_terrain.h  eg_viewport.h
engine/math/: api.h  config.h  ivector2.h  ivector2.inl  ivector3.h  ivector3.inl  ivector4.h  ivector4.inl  macros.h  matrix4.h  matrix4.inl  quaternion.h  quaternion.inl  utility.h  vector2.h  vector3.h  vector3.inl  vector4.h
engine/parser/: api.h  config.h  constants.h  context.c  context.h  expression.c  expression.h  forward.h  lexer.c  lexer.h  lexer.l  macros.h  parser.c  parser.h  parser.y
engine/physics/: api.h  config.h  constants.h  eg_collision.c  eg_collision.h  forward.h  macros.h  ray.c  ray.h
engine/renderer/: api.h  config.h  constants.h  forward.h  macros.h  pipeline.c  pipeline.h  renderer.c  renderer.h
engine/scene/: CMakeLists.txt  eg_game.c  eg_game.h
engine/scenes/: eg_game_scene.c  eg_game_scene.h
engine/src/: eg_buffer.c  eg_clang.cpp  eg_context.c  eg_database.c  eg_filesys.c  eg_glslang.c  eg_heap.c  eg_image.c  eg_importer.c  eg_model.c  eg_pipeline.c  eg_profiler.c  eg_random.c  eg_renderer.c  eg_scene.c  eg_swapchain.c  eg_terrain.c  eg_viewport.c
engine/src/component/: eg_camera.c  eg_controller.c  eg_rigidbody.c  eg_script.c  eg_transform.c
engine/src/container/: eg_map.c  eg_set.c  eg_string.c  eg_vector.c
engine/src/physic3/: eg_collision.c  eg_geometry.c
engine/src/renderer3/: eg_renderer.c  eg_renderpass.c
engine/src/system/: eg_controller.c  eg_rigidbody.c
engine/system/: CMakeLists.txt  eg_controller.c  eg_controller.h  eg_rigidbody.c  eg_rigidbody.h
engine/systems/: eg_controller_systems.c  eg_controller_systems.h  eg_rigidbody_systems.c  eg_rigidbody_systems.h
enton/: CMakeLists.txt  config.h  constants.h  context.c  context.h  enton.c  enton.h  epilogue.inl  expression.c  expression.h  forward.h  lexer.c  lexer.h  lexer.l  macros.h  parser.c  parser.h  parser.y  prologue.inl
game/: CMakeLists.txt  gm_main.c
game/include/game/: gm_main.h  gm_pch.h
game/src/: gm_main.c  gm_mod.c
shader/: CMakeLists.txt  compile.ps1  compile_shaders.ps1  test.glsl
shader/chunk/: editor.comp  generator.comp  mipmap.comp  renderer.frag  renderer.vert
shader/debug/: CMakeLists.txt  line.frag.spv  line.vert
shader/environment/: CMakeLists.txt  terrain.vert.spv
shader/math/: constants.glsl  cubic.glsl  mod289.glsl  quintic.glsl  srandom.glsl  taylor_inv_sqrt.glsl  voronoi.glsl
shader/noise/: curl.glsl  perlin.glsl  voronoi.glsl
shader/principled/: CMakeLists.txt  brdf.vert
shader/terrain/: biome.glsl  terrain.vert
ui/: CMakeLists.txt  ui.cpp  ui.h  ui_db.cpp  ui_db.h  ui_itself.cpp  ui_itself.h  ui_model.cpp  ui_model.h  ui_pch.h  ui_pipeline.cpp  ui_pipeline.h  ui_pipelines.cpp  ui_pipelines.h  ui_renderer.cpp  ui_renderer.h  ui_ui.cpp  ui_ui.h
(+66 files in other folders)
