FILE (GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_LIBRARY (compiler STATIC ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES (compiler PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES (compiler PUBLIC llvm)

# TARGET_PRECOMPILE_HEADERS (compiler PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/compiler/cp_pch.h")