FILE (GLOB CXX_SRC_FILES "*.cpp")

ADD_EXECUTABLE (editor ${CXX_SRC_FILES})

ADD_SUBDIRECTORY (dockable)

TARGET_LINK_LIBRARIES (editor PUBLIC engine)
TARGET_LINK_LIBRARIES (editor PUBLIC imgui)
TARGET_LINK_LIBRARIES (editor PUBLIC implot)

TARGET_PRECOMPILE_HEADERS (editor PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/ed_pch.h")