FILE (GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_EXECUTABLE (editor ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES (editor PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES (editor PUBLIC engine)
TARGET_LINK_LIBRARIES (editor PUBLIC imgui)
TARGET_LINK_LIBRARIES (editor PUBLIC imnodes)
TARGET_LINK_LIBRARIES (editor PUBLIC implot)
TARGET_LINK_LIBRARIES (editor PUBLIC imtexteditor)

TARGET_PRECOMPILE_HEADERS (editor PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/editor/ed_pch.h")