FILE (GLOB C_SRC_FILES "*.c" "${CMAKE_SOURCE_DIR}/binding/*.c")

ADD_LIBRARY (engine SHARED ${C_SRC_FILES})

ADD_SUBDIRECTORY (component)
ADD_SUBDIRECTORY (scene)
ADD_SUBDIRECTORY (system)

TARGET_INCLUDE_DIRECTORIES (engine PUBLIC ${JNI_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES (engine PUBLIC library)
TARGET_LINK_LIBRARIES (engine PUBLIC ${JNI_LIBRARIES})

TARGET_PRECOMPILE_HEADERS (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/eg_pch.h")

SET (DLL_SRC_FILE "${CMAKE_BINARY_DIR}/engine/engine.dll")
SET (DLL_DST_FILE "${CMAKE_SOURCE_DIR}/editor/engine.dll")

ADD_CUSTOM_COMMAND (
	TARGET engine POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different ${DLL_SRC_FILE} ${DLL_DST_FILE}
)