FILE (GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")

ADD_LIBRARY (engine STATIC ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES (engine PUBLIC core)
TARGET_LINK_LIBRARIES (engine PUBLIC compiler)
TARGET_LINK_LIBRARIES (engine PUBLIC container)
TARGET_LINK_LIBRARIES (engine PUBLIC database)
TARGET_LINK_LIBRARIES (engine PUBLIC importer)
TARGET_LINK_LIBRARIES (engine PUBLIC math)
TARGET_LINK_LIBRARIES (engine PUBLIC physic3)
TARGET_LINK_LIBRARIES (engine PUBLIC flecs)

TARGET_PRECOMPILE_HEADERS (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/eg_pch.h")