FILE (GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_LIBRARY (engine STATIC ${SRC_FILES})

TARGET_COMPILE_DEFINITIONS (engine PUBLIC "_CRT_SECURE_NO_WARNINGS")

TARGET_INCLUDE_DIRECTORIES (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES (engine PUBLIC cgltf)
TARGET_LINK_LIBRARIES (engine PUBLIC flecs)
TARGET_LINK_LIBRARIES (engine PUBLIC glslang)
TARGET_LINK_LIBRARIES (engine PUBLIC llvm)
TARGET_LINK_LIBRARIES (engine PUBLIC spirv_reflect)
TARGET_LINK_LIBRARIES (engine PUBLIC sqlite3)
TARGET_LINK_LIBRARIES (engine PUBLIC stb_json)
TARGET_LINK_LIBRARIES (engine PUBLIC Vulkan::Vulkan)

TARGET_PRECOMPILE_HEADERS (engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/engine/eg_pch.h")