FILE (GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")

ADD_LIBRARY (game STATIC ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES (game PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES (game PUBLIC engine)

TARGET_PRECOMPILE_HEADERS (game PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/game/gm_pch.h")