FIND_PROGRAM (GLSLANG_VALIDATOR_EXE
	NAMES glslangValidator
	HINTS ${Vulkan_INCLUDE_DIRS} ${Vulkan_LIBRARY_DIRS}
)

MESSAGE (STATUS "glslangValidator found at ${GLSLANG_VALIDATOR_EXE}")

SET (GLSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

FUNCTION (COMPILE_SHADER TARGET_NAME GLSL_SRC_FILE)

	GET_FILENAME_COMPONENT (GLSL_SRC_FILE_NAME ${GLSL_SRC_FILE} NAME)

	SET (SPV_FILE_NAME "${CMAKE_CURRENT_SOURCE_DIR}/${GLSL_SRC_FILE_NAME}.spv")

	MESSAGE (STATUS "Compiling shader ${GLSL_SRC_FILE} to ${SPV_FILE_NAME}")

	ADD_CUSTOM_COMMAND (
		OUTPUT ${SPV_FILE_NAME}
		COMMAND ${GLSLANG_VALIDATOR_EXE}
			-I${GLSL_INCLUDE_DIR}
			-V ${GLSL_SRC_FILE}
			-o ${SPV_FILE_NAME}
		DEPENDS ${GLSL_SRC_FILE}
	)

	ADD_CUSTOM_TARGET (${TARGET_NAME} ALL DEPENDS ${SPV_FILE_NAME})

ENDFUNCTION ()

ADD_SUBDIRECTORY (debug)
ADD_SUBDIRECTORY (principled)
ADD_SUBDIRECTORY (environment)